fixed home two page every section head line height and letter spacing for all screen size

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -2359,6 +2359,10 @@ img {
   line-height: 3.125rem;
 }
 
+.leading-\[4\.5rem\] {
+  line-height: 4.5rem;
+}
+
 .tracking-widest {
   letter-spacing: 0.1em;
 }
@@ -4645,6 +4649,10 @@ img {
   .lg\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .lg\:text-\[1\.875rem\] {
+    font-size: 1.875rem;
   }
 
   .lg\:font-medium {
